--- a/blood_bank_management_frontend/src/App.css
+++ b/blood_bank_management_frontend/src/App.css
@@ -51,3 +51,171 @@
   background-clip: padding-box;
   border-radius: 1rem;
 }
+
+.txtArea::-webkit-scrollbar {
+  background-color: transparent;
+  width: 1rem
+}
+
+.txtArea::-webkit-scrollbar-thumb {
+  border: 0.4rem solid rgba(0, 0, 0, 0);
+}
+
+* {
+  user-select: none;
+  /* supported by Chrome and Opera */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  font-family: 'Cabin', sans-serif;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.body-light {
+  background-color: #e6e7ee;
+}
+
+.body-dark {
+  background-color: #1A1A1A;
+}
+
+footer {
+  margin-left: 5rem;
+  padding: 4rem;
+  background-color: var(--secondary);
+  margin-top: 2rem;
+  transition: var(--transition-val);
+}
+
+#hgIcon {
+  width: 3rem;
+}
+
+footer #hgIcon {
+  width: 8rem;
+}
+
+.mapBox {
+  background-color: #a0d4e1;
+}
+
+
+.popUp {
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  padding: 0.6rem;
+  border-radius: 0.8rem;
+  box-shadow: 5px 10px 14px 0px #28282830;
+  color: black;
+  display: inline-flex;
+  z-index: 2;
+  transform-origin: 90% 50%;
+}
+
+.popup-success {
+  background-color: #d2f5b1;
+  border: 2px solid #3eb105;
+}
+
+.popup-error {
+  background-color: #fdcbcb;
+  border: 2px solid red;
+}
+
+.popUp-btn {
+  position: absolute;
+  right: 0.8rem;
+  top: 0.1rem;
+  cursor: pointer;
+}
+
+.popUp-btn div {
+  height: 1.2rem;
+  width: 1.2rem;
+  background-color: white;
+  position: absolute;
+  top: 0.5rem;
+  right: -0.25rem;
+  z-index: -1;
+  border-radius: 100%;
+  transition: var(--transition-val);
+}
+
+.popUp-btn span {
+  font-size: 1.6rem;
+}
+
+.popUp-btn:hover div {
+  background-color: rgb(0, 0, 0);
+}
+
+.popUp-btn:hover span {
+  color: white;
+}
+
+
+.bg {
+  height: 100vh;
+  position: absolute;
+  background-color: var(--primary);
+  width: 100%;
+  z-index: -1;
+  transition: var(--transition-val);
+}
+
+.App {
+  text-align: center;
+  height: fit-content;
+  background-color: var(--primary);
+  transition: var(--transition-val);
+}
+
+.navbar {
+  position: fixed;
+  background-color: var(--nav-primary);
+  padding: 0.5rem;
+  z-index: 2;
+}
+
+.navbar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
+
+
+.nav-icon {
+  fill: var(--icon-color);
+}
+
+.nav-item {
+  width: 100%;
+}
+
+.nav-item:last-child {
+  margin-top: auto;
+}
+
+.nav-link {
+  display: flex;
+  align-items: center;
+  height: 5rem;
+  color: var(--nav-text);
+  text-decoration: none;
+  transition: 600ms;
+}
+
+.nav-link svg {
+  width: 2rem;
+  min-width: 2rem;
+  margin: 0 1.2rem;
+}
