--- a/blood_bank_management_frontend/src/App.css
+++ b/blood_bank_management_frontend/src/App.css
@@ -219,3 +219,200 @@ footer #hgIcon {
   min-width: 2rem;
   margin: 0 1.2rem;
 }
+
+.link-text {
+  display: none;
+  margin-left: 1rem;
+  overflow: hidden;
+  white-space: nowrap;
+  font-family: 'Cabin', cursive;
+  font-weight: 800;
+  font-size: 1rem;
+}
+
+.logo {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: var(--text-primary);
+  background: var(--secondary);
+  font-size: 1.5rem;
+  letter-spacing: 0.3ch;
+  transition: var(--transition-val);
+}
+
+.logo svg {
+  transform: rotate(0deg);
+  transition: 600ms;
+}
+
+.logo-text {
+  display: inline;
+  position: absolute;
+  left: -999px;
+  transition: 600ms;
+}
+
+
+.navbar:hover {
+  width: 16rem;
+}
+
+.navbar:hover .link-text {
+  display: inline;
+}
+
+.nav-item:hover .nav-icon {
+  fill: var(--nav-hover);
+  transition: 600ms ease;
+}
+
+
+.nav-icon-active {
+  fill: var(--nav-active);
+}
+
+.nav-item:hover {
+  background-color: var(--nav-secondary);
+  border-radius: 0.4rem;
+  transition: 600ms ease;
+
+}
+
+.AppDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+  flex-direction: column;
+  margin-left: 5rem;
+  padding: 1rem;
+}
+
+@keyframes displayText {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.App-h1 {
+  font-size: 1.5rem;
+  color: var(--text-primary);
+  font-weight: 300;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.7vmax;
+  border: 0.1vmax solid var(--border);
+  border-radius: 5vmax;
+  box-shadow: var(--shadow);
+  background-color: var(--primary);
+  height: -moz-fit-content;
+  height: fit-content;
+  margin-top: 2vmax;
+  transition: var(--transition-val);
+}
+
+
+
+.animate {
+  transition: all 0.1s;
+  -webkit-transition: all 0.1s;
+}
+
+.action-button {
+  position: relative;
+  padding: 0.2rem 0.6rem;
+  margin-top: 1rem;
+  border-radius: 0.4rem;
+  border: none;
+  font-size: 2rem;
+  font-family: 'Cabin', cursive;
+  color: #FFF;
+  text-decoration: none;
+}
+
+.green {
+  margin-left: 1.5rem;
+  background-color: #82BF56;
+  border-bottom: 0.4rem solid #669644;
+  text-shadow: 0px -0.1rem #669644;
+}
+
+.red {
+  background-color: #E74C3C;
+  border-bottom: 0.4rem solid #BD3E31;
+  text-shadow: 0px -0.1rem #BD3E31;
+}
+
+.action-button:active {
+  transform: translate(0px, 0.1rem);
+  -webkit-transform: translate(0px, 0.1rem);
+  border-bottom: 0.1rem solid;
+}
+
+
+
+.selectStyle {
+  font-size: 1rem;
+  color: var(--text-primary);
+  font-weight: 300;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0 0.5rem 0 0.5rem;
+  border: 0.1rem solid var(--border);
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: var(--shadow);
+  background-color: var(--primary);
+  height: 2rem;
+  max-width: 90%;
+  transition: var(--transition-val);
+}
+
+.mkBold {
+  font-family: 'Cabin', cursive;
+  font-weight: 800;
+}
+
+.selectStyle-entering {
+  animation: selectAnim 1s ease-in;
+}
+
+.selectStyle-exiting {
+  animation: selectAnim 1s ease-out reverse backwards;
+}
+
+.searchDiv {
+  position: relative;
+  z-index: 1;
+  margin-top: 2.5vmax;
+}
+
+.searchDiv-button {
+  font-size: 0.7rem;
+  color: var(--text-primary);
+  font-weight: 400;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 0.5rem;
+  border: 0.1vmax solid var(--border);
+  box-shadow: var(--shadow);
+  background-color: var(--primary);
+  transition: var(--transition-val);
+}
+
+.searchDiv-button:active {
+  transform: translate(-0.1rem, 0.1rem);
+  box-shadow: 0.2vmax 0.2vmax 0.4vmax var(--accent2), -0.2vmax -0.2vmax 0.4vmax var(--accent1);
+}
+
+.searchDiv-button:disabled {
+  opacity: 0.6;
+  transform: translate(-0.1rem, 0.1rem);
+  box-shadow: 0.2vmax 0.2vmax 0.4vmax var(--accent2), -0.2vmax -0.2vmax 0.4vmax var(--accent1);
+}
