--- a/blood_bank_management_frontend/src/App.css
+++ b/blood_bank_management_frontend/src/App.css
@@ -416,3 +416,427 @@ footer #hgIcon {
   transform: translate(-0.1rem, 0.1rem);
   box-shadow: 0.2vmax 0.2vmax 0.4vmax var(--accent2), -0.2vmax -0.2vmax 0.4vmax var(--accent1);
 }
+
+
+.btnLeft {
+  border-radius: 5vmax 0 0 5vmax;
+  background-color: var(--left-btn-color);
+  transition: var(--transition-val);
+}
+
+.btnRight {
+  border-radius: 0 5vmax 5vmax 0;
+  margin-left: 1rem;
+  background-color: var(--right-btn-color);
+  transition: var(--transition-val);
+}
+
+.searchDiv-Input {
+  display: initial;
+  height: 2rem;
+  border: none;
+  padding: 1vmax;
+  background-color: var(--primary);
+  width: 21rem;
+  font-size: 1rem;
+  border-radius: 2rem;
+  color: var(--text-primary);
+  font-weight: 300;
+  text-align: center;
+  box-shadow: inset 0.2vmax 0.2vmax 0.3vmax var(--accent2), inset -0.2vmax -0.2vmax 0.3vmax var(--accent1);
+  max-width: 100%;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  transition: var(--transition-val);
+}
+
+.searchDiv-ul {
+  position: absolute;
+  text-align: left;
+  list-style-type: none;
+  background-color: var(--primary);
+  width: calc(100% - 15%);
+  border-radius: 0 0 0.7vmax 0.7vmax;
+  margin-left: 1.6rem;
+  box-shadow: 0.3rem 0.3rem 2rem var(--accent2);
+  transition: var(--transition-val);
+}
+
+.searchDiv-li {
+  color: var(--text-primary);
+  padding: 0.3vmax 0.3vmax 0.3vmax 0.9vmax;
+  cursor: pointer;
+  border-radius: 0.7vmax;
+  transition: var(--transition-val);
+}
+
+.searchDiv-li:hover {
+  background-color: var(--secondary);
+}
+
+.weather-details-cont {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.weather-div {
+  margin-top: 2vmax;
+  padding: 1vmax 2vmax 2vmax 2vmax;
+  border: 1px solid var(--border);
+  border-radius: 1vmax;
+  background-color: var(--primary);
+  box-shadow: var(--shadow);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  max-width: 70%;
+  margin-left: 1rem;
+  margin-right: 1rem;
+  transition: var(--transition-val);
+}
+
+
+.weather-temp {
+  border-radius: 50%;
+  background-color: var(--primary);
+  box-shadow: var(--shadow), inset 0.2vmax 0.2vmax 0.4vmax #9b8303;
+  height: 8rem;
+  width: 8rem;
+  position: relative;
+  background-image: linear-gradient(to bottom right, red, yellow);
+  transition: var(--transition-val);
+}
+
+.weather-temp-h1 {
+  color: white;
+  font-size: 2.2rem;
+  position: relative;
+  margin-top: 14%;
+  transform: translateY(-50%);
+  transition: var(--transition-val);
+}
+
+.weather-temp-p {
+  color: white;
+  font-size: 0.7vmax;
+  position: relative;
+  margin-top: -16%;
+  transition: var(--transition-val);
+}
+
+.weather-info {
+  display: inline-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.weather-info-div {
+  margin-top: 1rem;
+  background-color: var(--secondary);
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
+  border-radius: 10%;
+  padding: 1vmax;
+  transition: var(--transition-val);
+}
+
+.info-p {
+  font-family: 'Cabin', cursive;
+  color: var(--text-primary);
+  font-size: 0.7rem;
+  letter-spacing: 0.1vmax;
+  font-weight: 500;
+  transition: var(--transition-val);
+}
+
+.info-h1 {
+  font-family: 'Cabin', cursive;
+  color: var(--text-primary);
+  font-size: 1.4rem;
+  transition: var(--transition-val);
+}
+
+.other-details-cont {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  align-items: center;
+  align-content: center;
+}
+
+.OD-div {
+  margin-top: 2vmax;
+  padding: 1vmax;
+  border: 1px solid var(--border);
+  border-radius: 1vmax;
+  background-color: var(--primary);
+  box-shadow: var(--shadow);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 1vmax;
+  margin-right: 1vmax;
+  transition: var(--transition-val);
+}
+
+
+.OD-info {
+  display: flex;
+  flex-direction: column;
+  margin-top: 0.2rem;
+  justify-content: center;
+  font-size: 5rem;
+}
+
+
+.ODI-div {
+  margin-left: 1vmax;
+  margin-right: 1vmax;
+}
+
+.pollutionContainer {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.addressDetails {
+  margin-top: 2vmax;
+  padding: 1vmax;
+  border: 1px solid var(--border);
+  border-radius: 1vmax;
+  background-color: var(--primary);
+  box-shadow: var(--shadow);
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: 1vmax;
+  margin-right: 1vmax;
+  justify-content: space-evenly;
+  display: flex;
+  flex-wrap: wrap;
+  transition: var(--transition-val);
+}
+
+.addrText {
+  margin-left: 0.4rem;
+  margin-right: 0.4rem;
+  margin-top: 0.2rem;
+}
+
+.airQualityContainer {
+  background-color: var(--primary);
+  padding: 1rem;
+  margin-top: -0.4rem;
+  border-radius: 0.7rem;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: var(--transition-val);
+}
+
+
+.airQualityDiv {
+  margin-top: 1.5rem;
+  filter: drop-shadow(1px 0 0 var(--border)) drop-shadow(0 1px 0 var(--border)) drop-shadow(-1px 0 0 var(--border)) drop-shadow(0 -1px 0 var(--border)) drop-shadow(0.3vmax 0.3vmax 0.6vmax var(--accent2)) drop-shadow(-0.3vmax -0.3vmax 0.6vmax var(--accent1));
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: filter 600ms ease;
+}
+
+.textWithBg {
+  font-weight: 800;
+  background-color: var(--secondary);
+  border-radius: 0.7rem;
+  font-family: 'Cabin', cursive;
+  color: var(--text-primary);
+  transition: var(--transition-val);
+}
+
+.neumorphismEffect {
+  padding: 1vmax;
+  border: 1px solid var(--border);
+  border-radius: 1vmax;
+  background-color: var(--primary);
+  box-shadow: var(--shadow);
+  transition: var(--transition-val);
+}
+
+.newsCotainer {
+  width: 29rem;
+  max-width: 90%;
+  text-decoration: none;
+}
+
+.newsImage {
+  height: 16rem;
+  width: 27rem;
+  object-fit: cover;
+  max-width: 99%;
+  border-radius: 0.6rem;
+}
+
+.newsTitle {
+  font-size: 1.2rem;
+  background-color: var(--secondary);
+  padding: 0.3rem;
+  margin-top: 1.2rem;
+  border-radius: 0.6rem;
+}
+
+.newsCotainer:hover .newsImage {
+  filter: brightness(1.3);
+}
+
+.newsCotainer:active {
+  box-shadow: 0.1vmax 0.1vmax 0.3vmax var(--accent2), -0.1vmax -0.1vmax 0.3vmax var(--accent1);
+}
+
+
+.lottieAnim {
+  height: 14rem;
+  background-color: var(--primary);
+  width: 14rem;
+  padding: 1rem;
+  border-radius: 100%;
+  transition: var(--transition-val);
+  /* filter: drop-shadow(0.3vmax 0.3vmax 0.6vmax var(--accent2)) drop-shadow(-0.3vmax -0.3vmax 0.6vmax var(--accent1));
+  border: 1px solid var(--border); */
+}
+
+.contactTitle {
+  letter-spacing: 0.3rem;
+  font-weight: 100;
+  font-size: 1.8rem;
+  margin-bottom: 0.5rem;
+  background-color: var(--secondary);
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.contactFormTitle {
+  font-size: 3em;
+}
+
+.emote {
+  height: fit-content;
+  width: 100%;
+  padding: 0.5rem;
+  transition: var(--transition-val);
+}
+
+.rateEmote:hover {
+  filter: brightness(1.4);
+}
+
+.rateEmote:active {
+  width: 95%;
+}
+
+.emote-dark {
+  opacity: 0.1;
+}
+
+.feedbackTitle02 {
+  display: block;
+  font-size: 1.5vmax;
+  font-weight: 100;
+  letter-spacing: 0.5vmax;
+}
+
+.aboutInfo {
+  line-height: 1.8;
+  font-size: 1.3rem;
+}
+
+.socialIcons {
+  width: 4rem;
+  max-width: 10%;
+  fill: var(--accent2);
+  cursor: pointer;
+  transition: var(--transition-val);
+}
+
+.socialIcons:hover {
+  filter: drop-shadow(0.3vmax 0.3vmax 0.6vmax var(--accent2)) drop-shadow(-0.3vmax -0.3vmax 0.6vmax var(--accent1));
+}
+
+#linkedin:hover {
+  fill: #0072b1;
+}
+
+#youtube:hover {
+  fill: #FF0000;
+}
+
+#twitter:hover {
+  fill: #00acee;
+}
+
+#facebook:hover {
+  fill: #3b5998;
+}
+
+#instagram:hover {
+  fill: #fb3958;
+}
+
+
+
+/*-------------------ANIMATIONS----------------------------------*/
+@keyframes selectAnim {
+  0% {
+    color: var(--primary);
+    border: 0vmax solid var(--primary);
+    box-shadow: 0vmax 0vmax 0vmax var(--primary), 0vmax 0vmax 0vmax var(--primary);
+  }
+
+  80% {
+    color: var(--text-primary);
+  }
+
+  100% {
+    border: 0.1vmax solid var(--border);
+    box-shadow: var(--shadow);
+  }
+}
+
+@keyframes popupAnim {
+  0% {
+    transform: scale(0);
+    right: -20rem;
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    right: 1rem;
+    opacity: 1;
+  }
+}
+
+@keyframes closeAnim {
+  0% {
+    transform: scale(1);
+    right: 1rem;
+    opacity: 1;
+
+  }
+
+  100% {
+    transform: scale(0);
+    right: -20rem;
+    opacity: 0;
+  }
+}
