--- a/blood_bank_management_frontend/src/App.css
+++ b/blood_bank_management_frontend/src/App.css
@@ -840,3 +840,194 @@ footer #hgIcon {
     opacity: 0;
   }
 }
+
+/*--------------------MEDIA QUERIES-------------------*/
+
+/*-----SMALL SCREEN------*/
+@media screen and (max-width:600px) {
+  .weather-div {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  *::-webkit-scrollbar {
+    display: none;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    display: none;
+  }
+
+  footer {
+    margin-bottom: 5rem;
+    margin-left: 0;
+  }
+
+  .navbar {
+    bottom: 0;
+    width: 100vw;
+    height: 5rem;
+    overflow-x: auto;
+    overflow-y: hidden;
+  }
+
+  .logo {
+    display: none;
+  }
+
+  .navbar-nav {
+    flex-direction: row;
+  }
+
+  .nav-link {
+    justify-content: center;
+  }
+
+  .AppDiv {
+    margin-left: 0;
+    margin-bottom: 5rem;
+  }
+
+  .navbar:hover {
+    width: 100vw;
+  }
+
+  .navbar:hover .link-text {
+    display: none;
+  }
+
+
+  .nav-icon-active {
+    fill: var(--nav-active);
+  }
+
+  .nav-item:hover {
+    background-color: var(--nav-secondary);
+    border-radius: 0.4rem;
+    transition: 600ms ease;
+
+  }
+
+  .nav-item:last-child {
+    margin-top: initial;
+  }
+
+  .contactFormTitle {
+    font-size: 1.6em;
+  }
+
+  .aboutInfo {
+    line-height: 1.3;
+    font-size: 0.9rem;
+  }
+}
+
+.table-container {
+  height: 75vh;
+  width: 70vw;
+  overflow-y: scroll;
+}
+
+.table-container::-webkit-scrollbar {
+  width: 1rem;
+  background-color: var(--primary);
+}
+
+thead {
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  background-color: var(--accent3);
+  color: var(--secondary) !important;
+}
+
+.tableStyles {
+  margin-top: 2vmax;
+  padding: 1vmax 2vmax 2vmax 2vmax;
+  border: 1px solid var(--border);
+  border-radius: 1vmax;
+  background-color: var(--primary);
+  box-shadow: var(--shadow);
+  margin-right: 1rem;
+  transition: var(--transition-val);
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td,
+th {
+  text-align: left;
+  padding: 8px;
+  min-width: 10rem;
+}
+
+th {
+  position: sticky;
+}
+
+tbody {
+  color: var(--accent3);
+}
+
+tr:nth-child(even) {
+  background-color: var(--secondary);
+}
+
+.formInputs {
+  margin: 0.5rem !important;
+}
+
+.actionIcons {
+  color: var(--accent3);
+}
+
+.danger:hover {
+  color: rgb(230, 73, 73);
+}
+
+.safe:hover {
+  color: #06c624;
+}
+
+.react-datepicker-popper {
+  z-index: 153645 !important;
+}
+
+.react-datepicker__input-container input::placeholder {
+  color: #999;
+}
+
+/* .react-datepicker-wrapper {
+  display: inline !important;
+}
+
+.react-datepicker__input-container {
+  display: inline !important;
+} */
+
+/* Large screens */
+@media screen and (min-width: 600px) {
+  .navbar {
+    top: 0;
+    width: 5rem;
+    height: 100vh;
+    transition: width, 600ms ease;
+  }
+
+  .navbar:hover {
+    width: 16rem;
+  }
+
+  .navbar:hover .link-text {
+    display: inline;
+  }
+
+  .navbar:hover .logo svg {
+    margin-left: 11rem;
+  }
+
+  .navbar:hover .logo-text {
+    left: 0px;
+  }
+}
